force-app/main/default/objects/Campaign_Activity__c/Campaign_Activity__c.object-meta.xml
<CustomObject>
    <description>Custom Task related to existent  Account/Contact. Once a task is qualified need to create an opportunity.</description>
    <label>Campaign Activity</label>
    <nameField>
        <displayFormat>CA - {0000000}</displayFormat>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>