force-app/main/default/objects/Campaign_Activity__c/fields/Assign_to__c.field-meta.xml
<CustomField>
    <fullName>Assign_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives information about the user to whom task is assigned.</description>
    <label>Assign to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Activities</relationshipName>
    <trackHistory>false</trueHistory>
    <type>Lookup</type>
</CustomField>