force-app/main/default/objects/Campaign_Activity__c/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <label>Campaign Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>