force-app/main/default/objects/Campaign_Activity__c/fields/Campaign_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links Campaign Activity to main Campaign.</description>
    <label>Campaign ID Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Activities</relationshipLabel>
    <relationshipName>Campaign_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>