force-app/main/default/objects/Campaign_Activity__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Name of the campaign.</description>
    <label>Primary Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>