force-app/main/default/objects/Campaign_Activity__c/fields/Campaign_Questions_Campaign_Owner__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Questions_Campaign_Owner__c</fullName>
    <label>Campaign Questions? Campaign Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>