force-app/main/default/objects/Campaign_Activity__c/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>Reason to disqualify the task.</description>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Contact Information</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Not a fit</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Wrong Person/Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>