force-app/main/default/objects/Campaign_Activity__c/fields/Due_Date_Passed__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Passed__c</fullName>
    <description>Field is updated to value of 5 days, 10 days after the due date has been passed and Is used in workflow to send an email to customer/manager after every 5 days ,due date passed</description>
    <label>Due Date Passed</label>
    <type>Date</type>
</CustomField>