force-app/main/default/objects/Campaign_Activity__c/fields/Owner_s_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager_Email__c</fullName>
    <label>Owner&apos;s Manager Email</label>
    <type>Email</type>
</CustomField>