force-app/main/default/objects/Campaign_Activity__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <description>Date and time to remind about the task.</description>
    <label>Reminder</label>
    <type>DateTime</type>
</CustomField>