force-app/main/default/objects/Campaign_Activity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>