force-app/main/default/objects/Campaign_Activity__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject of the task.</description>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validate this Contact</fullName>
            </value>
            <value>
                <fullName>Validate this Account</fullName>
            </value>
            <value>
                <fullName>Validate this Lead/Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>