force-app/main/default/objects/Campaign_Activity__c/validationRules/Make_Disqualified_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Disqualified_Reason_Mandatory</fullName>
    <active>true</active>
    <description>If Campaign Activity Status is Disqualified make Disqualified Reason mandatory.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c ,&apos;Disqualified&apos;), ISBLANK( TEXT( Disqualified_Reason__c) ) )</errorConditionFormula>
    <errorDisplayField>Disqualified_Reason__c</errorDisplayField>
    <errorMessage>Please select a Reason for disqualifying this Campaign Activity.</errorMessage>
</ValidationRule>