force-app/main/default/objects/Campaign_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Subject__c</columns>
    <columns>Notes__c</columns>
    <columns>Assign_to__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>