force-app/main/default/objects/Campaign_Activity__c/listViews/ATM_Modernization_Program.listView-meta.xml
<ListView>
    <fullName>ATM_Modernization_Program</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Campaign_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>ATM Modernization Program</label>
</ListView>