force-app/main/default/objects/Campaign_Activity__c/listViews/X2015_Financial_Competitive_Deal_Registra1.listView-meta.xml
<ListView>
    <fullName>X2015_Financial_Competitive_Deal_Registra1</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>2015 Financial Competitive Deal Registra</label>
</ListView>