force-app/main/default/objects/Campaign_Activity__c/listViews/X2015_Financial_Competitive_Deal_Registra2.listView-meta.xml
<ListView>
    <fullName>X2015_Financial_Competitive_Deal_Registra2</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Campaign_Name__c</field>
        <operation>equals</operation>
        <value>2015 Financial Competitive Deal Registration</value>
    </filters>
    <label>2015 Financial Competitive Deal Registra</label>
</ListView>